fixed scroll aesthetic using overflow hover property

--- a/browser/scss/directives/chat.scss
+++ b/browser/scss/directives/chat.scss
@@ -23,6 +23,7 @@
   float: left;
   border-radius: 5px;
   padding: 15px;
+  overflow: hidden;
 }
 .header {
   input {
@@ -37,7 +38,12 @@
   top:55px;
   left:0px;
   right: 0px;
-  overflow: scroll; 
+  overflow: hidden; 
+  width: 100%;
+}
+
+.scrollContainer:hover {
+  overflow: auto;
 }
 
 .innerScroll {
