--- a/browser/scss/home/main.scss
+++ b/browser/scss/home/main.scss
@@ -54,12 +54,16 @@ a {
   height: 500px;
   width: 250px;
   color: #8B8B8B;
-  overflow: scroll;
+  overflow: hidden;
   background-color: #646464;
   float: left;
   button {
     margin-bottom: 10px;
   }
+}
+
+.directory:hover {
+  overflow: auto;
 }
 
 .ace_editor {
@@ -68,6 +72,11 @@ a {
   height: 500px;
   width: 58%;
   float: left;
+  overflow: hidden;
+}
+
+.ace_editor:hover {
+  overflow: auto;
 }
 
 .footer {
